# mnml-msg-teams

./: Cargo.toml  README.md
src/: app.rs  auth.rs  config.rs  keys.rs  main.rs  teams.rs  ui.rs
